# c-obix-tools

./: ProjectHome.md
diem/CoT/: .cdtproject  .cproject  .project  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  cot.doxyfile  libcot.pc.in  todo-list.xmind
diem/CoT/doc/: Makefile.am  Makefile.in  libcot.doxyfile
diem/CoT/doc/doxygen/: Makefile.am  Makefile.in  cot.doxyfile  full.doxyfile  full.doxyfile.in  libcot.doxyfile.in
diem/CoT/doc/libcot/html/: curl__ext_8c-source.html  curl__ext_8c.html  curl__ext_8h-source.html  curl__ext_8h.html  example__timer_8c-source.html  example__timer_8c.html  files.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  index.html  obix__client_8c-source.html  obix__client_8c.html  obix__client_8h-source.html  obix__client_8h.html  obix__client__dummy_8c-source.html  obix__client__dummy_8c.html  obix__comm_8h-source.html  obix__comm_8h.html  obix__http_8c-source.html  obix__http_8c.html  obix__http_8h-source.html  obix__http_8h.html  pages.html  sensor__floor__driver_8c-source.html  sensor__floor__driver_8c.html  table_8c-source.html  table_8c.html  table_8h-source.html  table_8h.html  todo.html
diem/CoT/doc/libcot/latex/: curl__ext_8c.tex  curl__ext_8h.tex  doxygen.sty  example__timer_8c.tex  files.tex  index.tex  obix__client_8c.tex  obix__client_8h.tex  obix__client__dummy_8c.tex  obix__comm_8h.tex  obix__http_8c.tex  obix__http_8h.tex  refman.tex  sensor__floor__driver_8c.tex  table_8c.tex  table_8h.tex  todo.tex
diem/CoT/res/: Makefile.am  Makefile.in  example_timer_config.xml  memtest_adapter_config.xml  obix-lighttpd.conf  obix_pb_config.xml  poll_generator_config.xml  sensor_floor_config.xml  sensor_floor_pico_config.xml  sensor_floor_pico_test_feed.xml  sensor_floor_pico_test_room.xml  server_about.xml  server_config.xml  server_def.xml  server_devices.xml  server_lobby.xml  server_sys_objects.xml  server_test_device.xml  server_watch.xml  test_adapter_config.xml  test_devices.xml  test_obix_client_config.xml  transform.xsl
diem/CoT/res/OpenWrt-SDK/: Makefile  README
diem/CoT/res/OpenWrt-SDK/cot/: Makefile
diem/CoT/res/OpenWrt-SDK/lwl/: Makefile
diem/CoT/src/: Makefile.am  Makefile.in
diem/CoT/src/adapters/: Makefile.am  Makefile.in  example_timer.c  max_mem_test.sh  max_mem_test_stop.sh  memtest_adapter.c  pico_http_feed_reader.c  pico_http_feed_reader.h  poll_generator.c  poll_generator.sh  sensor_floor_driver.c  sensor_floor_pico.c  test_adapter.c
diem/CoT/src/client/: Makefile.am  Makefile.in  curl_ext.c  curl_ext.h  libcot.doxyfile  libcot.mainpage  mainpage.h  obix_batch.c  obix_batch.h  obix_client.c  obix_client.h  obix_client_dummy.c  obix_comm.h  obix_http.c  obix_http.h  table.c  table.h
diem/CoT/src/common/: Makefile.am  Makefile.in  bool.h  ixml_ext.c  ixml_ext.h  log_utils.c  log_utils.h  lwl_ext.c  lwl_ext.h  obix_utils.c  obix_utils.h  ptask.c  ptask.h  sorted_table.c  table.c  table.h  xml_config.c  xml_config.h
diem/CoT/src/doxygen/: Makefile.am  Makefile.in  cot_main.h  libcot_desc.h  libcot_main.h
diem/CoT/src/server/: Makefile.am  Makefile.in  doctree.c  doctree.h  obix_fcgi.c  obix_fcgi.h  post_handler.c  post_handler.h  request.c  request.h  response.c  response.h  server.c  server.h  watch.c  watch.h  xml_storage.c  xml_storage.h
diem/CoT/src/test/: Makefile.am  Makefile.in  test_client.c  test_client.h  test_common.c  test_common.h  test_main.c  test_main.h  test_ptask.c  test_ptask.h  test_server.c  test_server.h  test_table.c  test_table.h
