## Process this file with automake to produce Makefile.in

lib_LTLIBRARIES				= libcot_utils.la

pkginclude_HEADERS			= obix_utils.h xml_config.h \
							  ptask.h ixml_ext.h lwl_ext.h

libcot_utils_la_SOURCES		= xml_config.h xml_config.c \
							  ixml_ext.h ixml_ext.c \
							  obix_utils.h obix_utils.c \
							  ptask.h ptask.c \
							  lwl_ext.h lwl_ext.c

libcot_utils_la_CFLAGS		= $(DEPS_CFLAGS)

